--- a/Python first steps, day 2 -- 2022-11Nov-28.ipynb
+++ b/Python first steps, day 2 -- 2022-11Nov-28.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "413026e7",
+   "id": "efb8dfd0",
    "metadata": {},
    "source": [
     "# Agenda, week 2: Loops, lists, and tuples\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "87537c74",
+   "id": "fee66f50",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "d54a7a8b",
+   "id": "9f89acde",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "d4044d8e",
+   "id": "cea5f470",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9799bb76",
+   "id": "bb64eae3",
    "metadata": {},
    "source": [
     "# Loops\n",
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "40899141",
+   "id": "d074d379",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91959c82",
+   "id": "c17b30ba",
    "metadata": {},
    "source": [
     "There are some problems with the above code:\n",
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "5c982491",
+   "id": "d7356477",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65775ae6",
+   "id": "8c8bdd28",
    "metadata": {},
    "source": [
     "How does our `for` loop work?\n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cda7bfa2",
+   "id": "52154b92",
    "metadata": {},
    "source": [
     "# Exercise: Vowels, digits, and others\n",
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "e39c4e55",
+   "id": "6c10d942",
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "f20ba658",
+   "id": "4edac97f",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "f420525a",
+   "id": "b217f619",
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "1f2650dc",
+   "id": "bffaea75",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "b49ed6a4",
+   "id": "128eb69b",
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10aa05af",
+   "id": "e4696fb8",
    "metadata": {},
    "source": [
     "When we say\n",
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "59e82458",
+   "id": "4b530672",
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "fb1338f0",
+   "id": "4aac0eba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "44b7c86f",
+   "id": "0526e455",
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "e6420d13",
+   "id": "46cc1472",
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "0dab8199",
+   "id": "066cad4d",
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "265cf795",
+   "id": "c40f4b65",
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "8871cb28",
+   "id": "04a44d9e",
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "54ce22d3",
+   "id": "ce99537b",
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "e2812464",
+   "id": "bf4d8161",
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "664808d7",
+   "id": "79b479b2",
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "734100fa",
+   "id": "d815c212",
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6281eeb6",
+   "id": "308cd4ad",
    "metadata": {},
    "source": [
     "# Exercise: Name triangles\n",
@@ -682,7 +682,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "d793fbc5",
+   "id": "05d8471a",
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +714,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "ca65a8d0",
+   "id": "8363334d",
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "3ea0003d",
+   "id": "ded756e0",
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2424cd93",
+   "id": "f62ee28d",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -792,7 +792,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "f3fb20f1",
+   "id": "170d913b",
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "d51c2f63",
+   "id": "2b5efb22",
    "metadata": {},
    "outputs": [
     {
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cef94e4e",
+   "id": "bfea0df4",
    "metadata": {},
    "source": [
     "# `while` loops\n",
@@ -865,8 +865,10 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "80ec95da",
-   "metadata": {},
+   "id": "637d1763",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -892,7 +894,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04a8a777",
+   "id": "a65d0d39",
    "metadata": {},
    "source": [
     "# Exercise: Sum to 100\n",
@@ -901,8 +903,31 @@
     "2. Ask the user, repeatedly, to enter a number.\n",
     "    - If the user enters a non-number, then scold them\n",
     "    - If the user enters a number, add it to `total`\n",
-    "3. When `total` is >= 100, stop asking + printing, and exit the loop.\n"
+    "    - Print the user's number and `total`\n",
+    "3. When `total` is >= 100, stop asking + printing, and exit the loop.\n",
+    "\n",
+    "Example:\n",
+    "\n",
+    "    Enter a number: 30\n",
+    "    You entered 30, total is now 30\n",
+    "    Enter a number: 15\n",
+    "    You entered 15, total is now 45\n",
+    "    Enter a number: 50\n",
+    "    You entered 50, total is now 95\n",
+    "    Enter a number: hello\n",
+    "    hello is not a number\n",
+    "    Enter a number: 20\n",
+    "    You entered 20, total is now 115\n",
+    "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "531ade95",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
