--- a/Python first steps, day 2 -- 2022-11Nov-28.ipynb
+++ b/Python first steps, day 2 -- 2022-11Nov-28.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5cae92aa",
+   "id": "5c22caa3",
    "metadata": {},
    "source": [
     "# Agenda, week 2: Loops, lists, and tuples\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "990ecd0a",
+   "id": "0300acd7",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "60f2a193",
+   "id": "54d8a324",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "5d147ad1",
+   "id": "aa06d48e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3976c4e2",
+   "id": "4d952653",
    "metadata": {},
    "source": [
     "# Loops\n",
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "55d6ac82",
+   "id": "1878a6fa",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2616a0a0",
+   "id": "72c5e9ba",
    "metadata": {},
    "source": [
     "There are some problems with the above code:\n",
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "40abf305",
+   "id": "e065a674",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc2c6d14",
+   "id": "9cffc6d6",
    "metadata": {},
    "source": [
     "How does our `for` loop work?\n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc1a624f",
+   "id": "04c3d889",
    "metadata": {},
    "source": [
     "# Exercise: Vowels, digits, and others\n",
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "432b7c1a",
+   "id": "5dd14bac",
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "1e9b9d4c",
+   "id": "34d30a60",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "7cea33ae",
+   "id": "ea923473",
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "2b4ece0a",
+   "id": "c7a1ddd6",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "cc29b9cb",
+   "id": "ff8e2560",
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6aa8290f",
+   "id": "48a2ba28",
    "metadata": {},
    "source": [
     "When we say\n",
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "6e8d6609",
+   "id": "57931336",
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "269bf8af",
+   "id": "40c5267d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "a5b47c9c",
+   "id": "96e454b5",
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "50654bf5",
+   "id": "4a4b1633",
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "7b15931a",
+   "id": "4688700a",
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "2d88bc6e",
+   "id": "96395f28",
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "07c96836",
+   "id": "ea46c136",
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "3781519d",
+   "id": "b5ba34f3",
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "7bac0dba",
+   "id": "1c798a59",
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "6809f404",
+   "id": "f535beab",
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "f49b93a9",
+   "id": "e153cbb5",
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4727d96b",
+   "id": "5b6f57d4",
    "metadata": {},
    "source": [
     "# Exercise: Name triangles\n",
@@ -682,7 +682,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "12e9e2bb",
+   "id": "6b42c65f",
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +714,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "401f81ca",
+   "id": "fcc4362c",
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "48f174d5",
+   "id": "f7c925f7",
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdb47bbe",
+   "id": "6bc65c57",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -792,7 +792,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "d1745ad7",
+   "id": "576fbc1c",
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "99aadbdf",
+   "id": "b7c6e77d",
    "metadata": {},
    "outputs": [
     {
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49e3197b",
+   "id": "5d01a580",
    "metadata": {},
    "source": [
     "# `while` loops\n",
@@ -865,7 +865,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "984952a5",
+   "id": "1291ce91",
    "metadata": {
     "scrolled": true
    },
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92191ec6",
+   "id": "a18180ca",
    "metadata": {},
    "source": [
     "# Exercise: Sum to 100\n",
@@ -923,10 +923,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bdcff118",
+   "execution_count": 49,
+   "id": "abf588cd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a number: 50\n",
+      "You entered 50, total is now 50\n",
+      "Enter a number: 40\n",
+      "You entered 40, total is now 90\n",
+      "Enter a number: 30\n",
+      "You entered 30, total is now 120\n",
+      "Done.\n"
+     ]
+    }
+   ],
    "source": [
     "total = 0\n",
     "\n",
@@ -936,7 +950,30 @@
     "    if s.isdigit():\n",
     "        n = int(s)\n",
     "        total += n\n",
-    "        print(f'You entered {n}, total is now ')"
+    "        print(f'You entered {n}, total is now {total}')\n",
+    "    else:\n",
+    "        print(f'{s} is not a number')\n",
+    "\n",
+    "print('Done.')              "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e1f8955",
+   "metadata": {},
+   "source": [
+    "# `isdigit` is a *string* method\n",
+    "\n",
+    "`str.isdigit` is a method that runs on strings. It tells us whether a string contains only the digits 0-9. You cannot run it on an integer.  So this will work:\n",
+    "\n",
+    "    if s.isdigit():\n",
+    "        n = int(s)\n",
+    "        \n",
+    "But this will not:\n",
+    "\n",
+    "    n = int(s).isdigit()\n",
+    "    \n",
+    "First of all, you'll get an error from Python saying th    "
    ]
   }
  ],
